# rootML

./: .gitignore  main.py  pyproject.toml  requirements.txt
A/deeplab/: train.py
A/deeplab/train/: model.py
A/deeplab/utils/: augment.py  datasetloader.py  masks.py
A/learning/: newMain.py  party.py
B/train/: main.py  test.py
MaskRCNN_pytorch/train/: classMap.py  dataset.py  startTrain.py
MaskRCNN_pytorch/utils/: class_map.py  mask_test.py  mask_test2.py
Unet_corrosion/: dataset.py  inference.py  model.py  train.py  train_binary.py  transforms.py  utils.py
codex_corrosion_segmentation/configs/: config.py  test_cuda.txt
codex_corrosion_segmentation/src/: composition_inference.py  dataset.py  inference.py  losses.py  metrics.py  train.py  visualize.py
weld_classifier/: config.py  predict.py  train.py
weld_clssifier/: config.py  predict.py  train.py
