[project]
name = "rootml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]
